# bt-class-downloader

./: .gitignore  README.md  pyproject.toml
src/biblicaltraining/: cli.py
src/bt/: cli.py
src/transcripts/: nt203-greek-tools-for-bible-study.md  nt510-biblical-hermeneutics.md
transcripts/: nt201-biblical-greek.md  nt201_transcriptions.md  nt203-greek-tools-for-bible-study.md  nt310-hermeneutics.md  nt510-biblical-hermeneutics.md
