[project]
name = "biblicaltraining-class-transcripts"
version = "0.2.0"
description = "Download lesson transcriptions for any BiblicalTraining.org class (course URL)"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "requests>=2.32.0",
  "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[project.scripts]
biblicaltraining-transcripts = "bt.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bt*"]

